--- a/index.html
+++ b/index.html
@@ -9,21 +9,11 @@
 </head>
 <body>
     <div id="loading"><h1>SYSTEM LOADING...</h1></div>
-    
-    <header>
-        <h1>SHINONOI TECH CLUB</h1>
-        <p>Innovation through Engineering</p>
-    </header>
-
+    <header><h1>SHINONOI TECH CLUB</h1><p>Innovation through Engineering</p></header>
     <nav></nav>
-
-    <main style="padding: 50px 20px; text-align: center;">
-        <section id="about">
-            <h2>About</h2>
-            <p>2026年4月、新しい技術の風が吹く。</p>
-        </section>
+    <main style="height: 2000px; padding: 50px; text-align: center;">
+        <section id="about"><h2>About</h2><p>2026年4月、新しい技術の風が吹く。</p></section>
     </main>
-
     <script src="/menu.js"></script>
 </body>
 </html>
