--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -60,15 +60,15 @@
             <div class="portfolio-item">
                 <div class="portfolio-img">COMING SOON</div>
                 <div class="portfolio-info">
-                    <h3>次世代エコカー A-01</h3>
-                    <p>2026年度大会に向けて開発中のプロトタイプ。アルミフレームによる軽量化を追求。</p>
+                    <h3>エコカー A-01</h3>
+                    <p>引き継いだエコカー</p>
                 </div>
             </div>
             <div class="portfolio-item">
                 <div class="portfolio-img">WEB SYSTEM</div>
                 <div class="portfolio-info">
                     <h3>公式Webサイト</h3>
-                    <p>部員自ら構築した、活動発信用のサイバーパンク風Webサイト。</p>
+                    <p>自ら構築した、活動発信用のサイバーパンク風Webサイト。</p>
                 </div>
             </div>
         </div>
