--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
     <main>
         <section id="about">
             <h2>活動内容</h2>
-            <p>篠ノ井技術クラブは、中学生による「モノづくり」の限界に挑戦するグループです。エコカー制作を中心に、プログラミングや電子工作など、技術の楽しさを追求します。</p>
             <div style="display: flex; gap: 20px; flex-wrap: wrap; margin-top: 30px;">
                 <div class="card" style="flex: 1; min-width: 250px;">
-                    <h3 style="color: #007bff;">エコカー開発</h3>
-                    <p>エネルギー効率を極限まで高めた車体を設計・制作し、大会出場を目指します。</p>
+                    <h3 style="color: #007bff; font-family: 'Orbitron';">ECO CAR</h3>
+                    <p>エコカー制作</p>
+                    <p style="font-size: 0.9rem; color: #666;">エネルギー効率を極限まで追求した、次世代の車体を自分たちの手で設計・構築します。</p>
                 </div>
                 <div class="card" style="flex: 1; min-width: 250px;">
-                    <h3 style="color: #007bff;">Web・IT技術</h3>
-                    <p>このサイトの運営をはじめ、活動を支えるシステムを自ら構築します。</p>
+                    <h3 style="color: #007bff; font-family: 'Orbitron';">COMPETITION</h3>
+                    <p>各種大会参加</p>
+                    <p style="font-size: 0.9rem; color: #666;">制作したマシンで技術を競う大会に出場し、他校との交流や技術の向上を目指します。</p>
                 </div>
             </div>
         </section>
@@ -38,23 +39,16 @@
             <div class="card">
                 <span class="card-date">2026.01.24</span>
                 <a href="/blog/index.html" class="card-title">公式Webサイトを公開しました</a>
-                <p>本日から活動の様子をこのサイトで発信していきます。</p>
+                <p>活動記録を随時更新していきます。4月の本格始動に向けた準備状況をお伝えします。</p>
             </div>
-            <a href="/blog/index.html" style="text-decoration: none; font-weight: bold;">→ すべてのログを見る</a>
-        </section>
-
-        <section id="portfolio-link" style="margin-top: 80px; padding: 60px 20px; background: #f0f7ff; border-radius: 20px; text-align: center;">
-            <h2 style="border: none; text-align: center; padding: 0;">これまでの実績</h2>
-            <p>私たちが制作してきたマシンやシステムの詳細はこちら。</p>
-            <a href="/portfolio/index.html" class="card-title" style="color: #007bff;">PORTFOLIOページへ</a>
         </section>
 
         <section id="recruit" style="margin-top: 80px;">
             <h2>メンバー募集中</h2>
-            <p>技術に興味がある仲間を探しています。初心者でも「作りたい」気持ちがあれば歓迎します！</p>
+            <p>モノづくりに情熱を燃やす仲間を募集しています。</p>
             <div style="text-align: center; margin-top: 30px;">
                 <button onclick="alert('4月の活動開始に合わせて受付を開始します！')" style="padding: 15px 40px; font-size: 1.1rem; background: #007bff; color: #fff; border: none; border-radius: 30px; cursor: pointer; font-weight: bold; transition: 0.3s;">
-                    入会・見学について詳しく
+                    入会・見学のお問い合わせ
                 </button>
             </div>
         </section>
