--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <div class="card" style="flex: 1; min-width: 250px;">
                     <h3 style="color: #007bff; font-family: 'Orbitron';">ECO CAR</h3>
                     <p>エコカー制作</p>
-                    <p style="font-size: 0.9rem; color: #666;">エネルギー効率を極限まで追求した、次世代の車体を自分たちの手で設計・構築します。</p>
+                    <p style="font-size: 0.9rem; color: #666;"></p>
                 </div>
                 <div class="card" style="flex: 1; min-width: 250px;">
                     <h3 style="color: #007bff; font-family: 'Orbitron';">COMPETITION</h3>
                     <p>各種大会参加</p>
-                    <p style="font-size: 0.9rem; color: #666;">制作したマシンで技術を競う大会に出場し、他校との交流や技術の向上を目指します。</p>
+                    <p style="font-size: 0.9rem; color: #666;"></p>
                 </div>
             </div>
         </section>
