--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -55,25 +55,18 @@
             <h2>PROJECTS</h2>
             <div class="portfolio-grid">
                 
-                <div class="card">
-                    <div class="portfolio-image">IMAGE: ECO CAR A-01</div>
-                    <div class="tag">MACHINE</div>
-                    <h3 class="card-title" style="font-size: 1.4rem;">エコカー A-01 プロトタイプ</h3>
-                    <p>アルミ合金フレームを採用し、総重量の軽量化を徹底。空気抵抗を最小限に抑えたカウル設計により、エネルギー効率を最大化しました。</p>
-                </div>
-
-                <div class="card">
+                　<div class="card">
                     <div class="portfolio-image">IMAGE: SYSTEM</div>
                     <div class="tag">WEB</div>
                     <h3 class="card-title" style="font-size: 1.4rem;">クラブ公式サイト</h3>
-                    <p>部員がゼロから設計・開発。HTML/CSS/JSを使用し、保守性の高いコードで構築されています。活動の透明性を高めるための情報発信基地です。</p>
+                    <p>ゼロから設計・開発。HTML/CSS/JSを使用し、保守性の高いコードで構築されています。</p>
                 </div>
 
                 <div class="card">
                     <div class="portfolio-image">COMING SOON</div>
                     <div class="tag">EVENT</div>
                     <h3 class="card-title" style="font-size: 1.4rem;">2026年度 大会参戦</h3>
-                    <p>2026年夏の大会に向けて現在マシンをアップデート中。レースデータのリアルタイム解析システムの導入を予定しています。</p>
+                    <p>2025年6月22日に開催されたHONDAエコマイレッジチャレンジ茂木大会 Group-ⅰで入賞を果たしました。</p>
                 </div>
 
             </div>
