--- a/team/index.html
+++ b/team/index.html
@@ -2,26 +2,49 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>会員専用 | 篠ノ井技術クラブ</title>
+    <title>部員専用 | 篠ノ井技術クラブ</title>
     <link rel="stylesheet" href="/style.css">
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 </head>
 <body>
     <div id="loading"><h1>SYSTEM LOADING...</h1></div>
-    <header><h1>TEAM DASHBOARD</h1><p>部員専用ポータル</p></header>
+    <header>
+        <h1>TEAM DASHBOARD</h1>
+        <p>篠ノ井技術クラブ 部員専用エリア</p>
+    </header>
     <nav></nav>
 
     <main id="protected-content" style="display: none;">
         <section>
-            <h2>部内限定資料</h2>
+            <h2>部内連絡</h2>
             <div class="card">
-                <h3>共有事項</h3>
-                <p>ここはログインした部員のみが閲覧できるエリアです。</p>
+                <span class="card-date">2026.01.24 更新</span>
+                <h3>【重要】次回の走行テストについて</h3>
+                <p>2月初旬に予定しているエコカーの走行テストに向け、各班の進捗報告をスプレッドシートに記入してください。</p>
             </div>
-            <button onclick="logout()" class="btn" style="background: #666;">ログアウト</button>
         </section>
+
+        <section style="margin-top: 40px;">
+            <h2>クイックリンク</h2>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px;">
+                <div class="card">
+                    <h4>設計図アーカイブ</h4>
+                    <p>これまでのCADデータや回路図はこちらから閲覧できます。</p>
+                </div>
+                <div class="card">
+                    <h4>会計・備品リスト</h4>
+                    <p>部費の使用状況と、部室にあるパーツの在庫一覧です。</p>
+                </div>
+            </div>
+        </section>
+
+        <div style="text-align: center; margin-top: 60px;">
+            <button onclick="logout()" class="btn" style="background: #555;">ログアウト</button>
+        </div>
     </main>
+
+    <footer><p>&copy; 2026 篠ノ井技術クラブ</p></footer>
 
     <script>
         const firebaseConfig = {
@@ -34,16 +57,21 @@
         };
         firebase.initializeApp(firebaseConfig);
 
+        // ログイン状態を常にチェック
         firebase.auth().onAuthStateChanged((user) => {
             if (user) {
+                // ログイン中なら中身を表示
                 document.getElementById('protected-content').style.display = 'block';
             } else {
+                // 未ログインならログイン画面へ強制送還
                 window.location.href = "/team/login.html";
             }
         });
 
         function logout() {
-            firebase.auth().signOut().then(() => { window.location.href = "/index.html"; });
+            firebase.auth().signOut().then(() => {
+                window.location.href = "/index.html";
+            });
         }
     </script>
     <script src="/menu.js"></script>
