--- a/team/login.html
+++ b/team/login.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>会員ポータル | 篠ノ井技術クラブ</title>
     <link rel="stylesheet" href="/style.css">
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
@@ -9,7 +10,10 @@
 </head>
 <body>
     <div id="loading"><h1>SYSTEM LOADING...</h1></div>
-    <header><h1>TEAM PORTAL</h1><p>部員登録 ＆ ログイン</p></header>
+    <header>
+        <h1>TEAM PORTAL</h1>
+        <p>部員登録 ＆ ログイン</p>
+    </header>
 
     <main>
         <div class="card" style="max-width: 450px; margin: 0 auto;">
@@ -49,6 +53,7 @@
         firebase.initializeApp(firebaseConfig);
 
         let isLoginMode = true;
+        const GAS_URL = "https://script.google.com/macros/s/AKfycbzPX-63H74ClFtB8Pja4hg22wh1hs36P8po3gZXgQGrJLXjqEofnV8T94VFWan0f6xI/exec";
 
         function toggleMode() {
             isLoginMode = !isLoginMode;
@@ -62,11 +67,11 @@
             if (isProcessing) {
                 btn.disabled = true;
                 btn.innerText = "処理中...";
-                btn.style.opacity = "0.7";
+                btn.classList.add('processing');
             } else {
                 btn.disabled = false;
                 btn.innerText = isLoginMode ? "ログイン" : "登録申請を送る";
-                btn.style.opacity = "1";
+                btn.classList.remove('processing');
             }
         }
 
@@ -76,7 +81,7 @@
             const errorMsg = document.getElementById('error-msg');
             
             if(!email || !password) {
-                errorMsg.innerText = "情報を入力してください。";
+                errorMsg.innerText = "すべての項目を入力してください。";
                 return;
             }
 
@@ -84,23 +89,26 @@
             errorMsg.innerText = "";
 
             if (isLoginMode) {
-                // ログイン処理
                 firebase.auth().signInWithEmailAndPassword(email, password)
                     .then(() => { window.location.href = "/team/index.html"; })
                     .catch((error) => {
                         setProcessing(false);
-                        errorMsg.innerText = "認証に失敗しました。";
+                        errorMsg.innerText = "ログインに失敗しました。承認済みか確認してください。";
                     });
             } else {
-                // 新規登録処理
                 firebase.auth().createUserWithEmailAndPassword(email, password)
                     .then(() => {
-                        alert("登録申請が完了しました。管理者の承認をお待ちください。");
+                        fetch(GAS_URL, {
+                            method: "POST",
+                            mode: "no-cors",
+                            body: JSON.stringify({ email: email })
+                        });
+                        alert("登録申請を送信しました。管理者が承認するまでお待ちください。");
                         window.location.reload();
                     })
                     .catch((error) => {
                         setProcessing(false);
-                        errorMsg.innerText = "登録に失敗しました（既に使われているか、パスワードが短すぎます）。";
+                        errorMsg.innerText = "登録に失敗しました（既に登録されているか、パスワードが脆弱です）。";
                     });
             }
         }
