--- a/team/index.html
+++ b/team/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>部員専用 | 篠ノ井技術クラブ</title>
     <link rel="stylesheet" href="/style.css">
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
@@ -11,36 +12,36 @@
     <div id="loading"><h1>SYSTEM LOADING...</h1></div>
     <header>
         <h1>TEAM DASHBOARD</h1>
-        <p>篠ノ井技術クラブ 部員専用エリア</p>
+        <p>篠ノ井技術クラブ 部員専用ポータル</p>
     </header>
     <nav></nav>
 
     <main id="protected-content" style="display: none;">
         <section>
-            <h2>部内連絡</h2>
+            <h2>部内限定連絡</h2>
             <div class="card">
-                <span class="card-date">2026.01.24 更新</span>
-                <h3>【重要】次回の走行テストについて</h3>
-                <p>2月初旬に予定しているエコカーの走行テストに向け、各班の進捗報告をスプレッドシートに記入してください。</p>
+                <span class="card-date">UPDATE: 2026.01.24</span>
+                <h3>【重要】承認済みメンバーへ</h3>
+                <p>現在、名簿の自動連携システムを構築中です。ログインできた方は無事に承認フローを通過しています。</p>
             </div>
         </section>
 
         <section style="margin-top: 40px;">
-            <h2>クイックリンク</h2>
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px;">
+            <h2>技術ドキュメント</h2>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px;">
                 <div class="card">
-                    <h4>設計図アーカイブ</h4>
-                    <p>これまでのCADデータや回路図はこちらから閲覧できます。</p>
+                    <h4>設計マニュアル</h4>
+                    <p>エコカー制作における基本設計思想とパーツ選定基準。</p>
                 </div>
                 <div class="card">
-                    <h4>会計・備品リスト</h4>
-                    <p>部費の使用状況と、部室にあるパーツの在庫一覧です。</p>
+                    <h4>予算・備品管理</h4>
+                    <p>部費の使用状況と現在のパーツ在庫リスト（スプレッドシート連携予定）。</p>
                 </div>
             </div>
         </section>
 
         <div style="text-align: center; margin-top: 60px;">
-            <button onclick="logout()" class="btn" style="background: #555;">ログアウト</button>
+            <button onclick="logout()" class="btn" style="background: #444; border: none; cursor: pointer;">ログアウト</button>
         </div>
     </main>
 
@@ -57,13 +58,10 @@
         };
         firebase.initializeApp(firebaseConfig);
 
-        // ログイン状態を常にチェック
         firebase.auth().onAuthStateChanged((user) => {
             if (user) {
-                // ログイン中なら中身を表示
                 document.getElementById('protected-content').style.display = 'block';
             } else {
-                // 未ログインならログイン画面へ強制送還
                 window.location.href = "/team/login.html";
             }
         });
