--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
             <h2>ABOUT</h2>
             <div class="card">
                 <h3>技術で未来を切り拓く</h3>
-                <p>篠ノ井技術クラブは、エコランカーの製作やロボット開発を中心に活動している技術者集団です。</p>
+                <p>篠ノ井技術クラブは、エコランカーの制作、各種大会に参加しているチームです。</p>
             </div>
         </section>
 
         <section id="recruit" style="margin-top: 50px;">
             <h2>RECRUIT</h2>
             <div class="card">
-                <h3>新入部員募集中</h3>
-                <p>設計、溶接、プログラミング、マネジメント。あなたの得意を活かせる場所がここにあります。</p>
+                <h3>募集中</h3>
+                <p></p>
                 <a href="/team/login.html" class="btn">新規登録して入部申請</a>
             </div>
         </section>
