--- a/team/index.html
+++ b/team/index.html
@@ -3,49 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>部員専用 | 篠ノ井技術クラブ</title>
+    <title>チーム専用エリア | 篠ノ井技術クラブ</title>
     <link rel="stylesheet" href="/style.css">
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
 </head>
 <body>
-    <div id="loading"><h1>SYSTEM LOADING...</h1></div>
+    <div id="loading"><h1>CHECKING AUTHENTICATION...</h1></div>
+
     <header>
         <h1>TEAM DASHBOARD</h1>
-        <p>篠ノ井技術クラブ 部員専用ポータル</p>
+        <p>篠ノ井技術クラブ チーム専用エリア</p>
     </header>
+
     <nav></nav>
 
     <main id="protected-content" style="display: none;">
         <section>
-            <h2>部内限定連絡</h2>
+            <h2>チーム内連絡</h2>
             <div class="card">
-                <span class="card-date">UPDATE: 2026.01.24</span>
-                <h3>【重要】承認済みメンバーへ</h3>
-                <p>現在、名簿の自動連携システムを構築中です。ログインできた方は無事に承認フローを通過しています。</p>
+                <span class="card-date">2026.01.24</span>
+                <h3>システム稼働中</h3>
+                <p>このページは、管理者が有効化したアカウントのみが閲覧できるチーム専用のダッシュボードです。</p>
             </div>
         </section>
 
         <section style="margin-top: 40px;">
-            <h2>技術ドキュメント</h2>
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px;">
+            <h2>共有リソース</h2>
+            <div class="portfolio-grid">
                 <div class="card">
-                    <h4>設計マニュアル</h4>
-                    <p>エコカー制作における基本設計思想とパーツ選定基準。</p>
+                    <h4>チーム設計図</h4>
+                    <p>共有フォルダ内の最新CADデータを参照してください。</p>
                 </div>
                 <div class="card">
-                    <h4>予算・備品管理</h4>
-                    <p>部費の使用状況と現在のパーツ在庫リスト（スプレッドシート連携予定）。</p>
+                    <h4>活動ログ</h4>
+                    <p>これまでのプロジェクト進行状況を確認できます。</p>
                 </div>
             </div>
         </section>
 
         <div style="text-align: center; margin-top: 60px;">
-            <button onclick="logout()" class="btn" style="background: #444; border: none; cursor: pointer;">ログアウト</button>
+            <button onclick="logout()" class="btn" style="background: #444;">ログアウト</button>
         </div>
     </main>
 
-    <footer><p>&copy; 2026 篠ノ井技術クラブ</p></footer>
+    <footer>
+        <p>&copy; 2026 篠ノ井技術クラブ</p>
+    </footer>
 
     <script>
         const firebaseConfig = {
@@ -58,10 +62,27 @@
         };
         firebase.initializeApp(firebaseConfig);
 
+        const protectedContent = document.getElementById('protected-content');
+        const loader = document.getElementById('loading');
+
+        // ログイン状態とアカウント有効性を監視
         firebase.auth().onAuthStateChanged((user) => {
             if (user) {
-                document.getElementById('protected-content').style.display = 'block';
+                // アカウントの最新状態（無効化されていないか）をFirebaseサーバーに確認
+                user.reload().then(() => {
+                    // 正常ならコンテンツを表示
+                    protectedContent.style.display = 'block';
+                    loader.style.opacity = '0';
+                    loader.style.visibility = 'hidden';
+                }).catch((error) => {
+                    // アカウントが無効化（Disabled）されている場合はここに入る
+                    alert("このアカウントは現在承認されていないか、無効化されています。");
+                    firebase.auth().signOut().then(() => {
+                        window.location.href = "/team/login.html";
+                    });
+                });
             } else {
+                // そもそもログインしていない場合はログイン画面へ
                 window.location.href = "/team/login.html";
             }
         });
