--- a/index.html
+++ b/index.html
@@ -5,20 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>篠ノ井技術クラブ | 公式サイト</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Noto+Sans+JP:wght@400;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="loading"><h1>SYSTEM LOADING...</h1></div>
 
+    <div id="nav-container"></div>
+
     <header>
-        <div style="position: absolute; top: 20px; right: 20px;">
-            <a href="/team/login.html" class="login-box">TEAM LOGIN</a>
-        </div>
         <h1>篠ノ井技術クラブ</h1>
         <p>2026年度、新たなエンジニアリングの挑戦が始まる</p>
     </header>
-
-    <nav></nav>
 
     <main>
         <section id="about">
@@ -32,9 +29,9 @@
         <section id="recruit" style="margin-top: 50px;">
             <h2>RECRUIT</h2>
             <div class="card">
-                <h3>募集中</h3>
-                <p></p>
-                <a href="/team/login.html" class="btn">新規登録して入部申請</a>
+                <h3>クラブメンバー募集中</h3>
+                <p>私たちは共に技術を磨く仲間を募集しています。</p>
+                <a href="/team/login.html" class="btn">新規登録して参加申請</a>
             </div>
         </section>
     </main>
@@ -45,12 +42,18 @@
 
     <a href="#" id="page-top">TOP</a>
 
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+    
     <script src="menu.js"></script>
+
     <script>
         window.addEventListener('load', () => {
             const loader = document.getElementById('loading');
             loader.style.opacity = '0';
-            loader.style.visibility = 'hidden';
+            setTimeout(() => {
+                loader.style.visibility = 'hidden';
+            }, 500);
         });
 
         const pageTop = document.getElementById('page-top');
